# Subramanya-Sharma

./: README.md  app.py  pyproject.toml
Resume/: contact.html  education.html  experience.html  generate.py  index.html  links.html  projects.html  script.js  skills.html  societies.html  styles.css
Resume2/static/js/: spa.js
Resume2/templates/: base.html  experience.html  index.html  projects.html  skills.html
static/css/: spa.css
static/js/: spa.js
templates/: about.html  base.html  certifications.html  contact.html  experience.html  index.html  projects.html  resume.html  skills.html
