[project]
name = "subramanya-sharma"
version = "0.1.0"
description = "All"
authors = [
    {name = "subbusharma123",email = "76877382+subbusharma123@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "pyproject-toml (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"